# kvdn

./: .gitignore  2_0_req  BUILD.sh  Dockerfile  KvdnClient.cpp  KvdnClient.hpp  LICENCE  README.md  README.txt  build.gradle  buildfresh.sh  buildit.sh  config.json  docker-compose-standalone.yaml  docker-compose.yml  intercepternote  kvdn.bats  meta_client.sh  mulibuild.sh  run-mapdb.sh  run.sh  settings.gradle
Client/cli/: README.txt  alpha.sh  config.sh  kvenv.sh
Client/cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  KvdnClient.cbp  KvdnClient.cpp  KvdnClient.cpp.jinja2  KvdnClient.hpp  KvdnClient.hpp.jinja2  Makefile  VertxBus.cpp  basicFileTraverse.cbp  cmake_install.cmake  install_manifest.txt  kvdn.pc  ref_KvdnClient.h  test.cpp
Client/cpp/backward-cpp/: Makefile  README.md  backward.cbp  backward.cpp  backward.hpp  cmake_install.cmake  install_manifest.txt
Client/cpp/json/: LICENSE  jsoncpp.cpp
Client/cpp/websocketpp/: changelog.md
Client/filesystem/: JavaFSView.groovy
Client/go/: client.go
Client/golang/: build.gradle
Client/node/: build.gradle  kvsvc-proxy.js  serviceproxy-example.js
Client/python/: .gitignore  cli.py  (+5 more)
Containers/: docker-compose.yml
cfg/: supervisord.conf
crdt-keys/: build.gradle
docs/: js-quickstart.md
gradle/: config.groovy
graph-extensions/: build.gradle
hazelcast-extensions/: build.gradle
hazelcast-keys/: build.gradle
hazelcast-store/: build.gradle
ignite-extensions/: build.gradle
ignite-keys/: build.gradle
mapdb-extensions/: build.gradle
project/: README.txt  build.gradle  build_old.gradle  notes  oobkeys  settings.gradle
server/: build.gradle
service-proxy/: build.gradle
test/: kvdn.bats
util/: build.gradle
workflow/: build.bats  clean.bats  mulibuild.sh  publish.bats  release.bats
(+390 files in other folders)
